# rusty_group_chat

./: .env.sample  .gitignore  Cargo.toml  README.md
rusty_group_chat/: Cargo.toml
rusty_group_chat/src/: chat.rs  lib.rs  system_chat_message.rs  user.rs  user_repo.rs
rusty_group_chat_cli/: Cargo.toml
rusty_group_chat_cli/src/: chat.rs  chat_session_details.rs  group_chat.rs  lib.rs  main.rs  terminal.rs  websocket.rs  websocket_url.rs
rusty_group_chat_web/: Cargo.toml
rusty_group_chat_web/src/: app_router.rs  app_server_config.rs  app_state.rs  handlers.rs  main.rs  server_config.rs
rusty_group_chat_web/src/handlers/: group_chat_handler.rs
