[package]
name = "rusty_group_chat_cli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tungstenite = "0.18.0"
serde = { version="1.0", features=["derive"] }
serde_json = "1.0"

[dependencies.crossterm]
version = "0.26"
features = ["serde", "event-stream"] 

