[package]
name = "rusty_group_chat_cli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio-tungstenite = "0.18.0"
serde = { version="1.0", features=["derive"] }
serde_json = "1.0"
url = "2.3"
futures-util = "0.3"
futures-channel = "0.3.27"
tokio = { version = "1", features = ["full"] }


[dependencies.crossterm]
version = "0.26"
features = ["serde", "event-stream"] 

