[package]
name = "rusty_group_chat_web"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix = "0.13.0"
actix-web = "4.3.0"
actix-web-actors = "4.2.0"
dotenvy = "0.15"
tracing = "0.1.37"
tracing-subscriber = "0.3.16"

